# nbc4gpu

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NOTES.md  README.md  main.cpp  performanceTest.cpp  performanceTestCPU.cpp  performanceTestGPU.cpp
cmake_modules/: GNUtoolchain.cmake  UseClangFormat.cmake
cmake_modules/finders/: FindCLANG_TIDY.cmake  FindLLVMAr.cmake  FindLLVMNm.cmake  FindLLVMRanLib.cmake
cpuclassifier/: CMakeLists.txt
cpuclassifier/src/: CPUCalculateClassP.hpp  CPUClassifier.hpp  CPULearnClass.hpp  CPULearnColumn.hpp  main.cpp
generator/: generator.hpp
include/: project_defines.h
include/classifier/: classifier.h
include/dummy/: dummy.h
include/error/: exeception.h
src/: Defines.h  project_defines.h
src/classifier/: GPUCalculateClassP.hpp  GPUClassifier.hpp  GPULearnClass.hpp  GPULearnColumn.hpp  classifier.cpp  classifier.h  learnColumn.h
src/cpuclassifier/: CPUCalculateClassP.hpp  CPUClassifier.hpp  CPULearnClass.hpp  CPULearnColumn.hpp
src/dummy/: dummy.cpp
src/error/: Execeptions.h  exeception.h
src/generator/: Generator.hpp
src/gpuclassifier/: GPUCalculateClassP.hpp  GPUClassifier.hpp  GPULearnClass.hpp  GPULearnColumn.hpp
test/: CMakeLists.txt  test_main.cpp
test/algorithms/: calc_p_test.cpp  classifier_test.cpp  example_test.cpp  learn_class_test.cpp  learn_column_test.cpp
test/cpuTest/: calc_p_test.cpp  classifier_test.cpp  learn_class_test.cpp  learn_column_test.cpp
test/gpuTest/: learn_column_test.cpp
testcpu/: CMakeLists.txt
testcpu/algorithms/: classifier_test.cpp
testgpu/: CMakeLists.txt
